{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 397,
  "lineage": "452f634b-2672-07c3-9df3-422837515167",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e1792c64e61314c",
            "arn": "arn:aws:ec2:eu-west-1:277892772912:elastic-ip/eipalloc-05e1792c64e61314c",
            "association_id": "eipassoc-068caf3aeda1d5712",
            "domain": "vpc",
            "id": "eipalloc-05e1792c64e61314c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f7105fb9434a14b9",
            "private_dns": "ip-10-0-1-16.eu-west-1.compute.internal",
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-63-32-196-14.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.32.196.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kvm-eip"
            },
            "tags_all": {
              "Name": "kvm-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.kvm_primary",
            "aws_security_group.cloudstack",
            "aws_security_group.kvm",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01c7096235204c7be",
            "arn": "arn:aws:ec2:eu-west-1:277892772912:instance/i-0ac61c7d2850c26f3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac61c7d2850c26f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cloudstack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-083ee21a46711e771",
            "private_dns": "ip-10-0-1-18.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-3-250-67-244.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.67.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0d6de751580b2f264",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0558623b258fd7ac3",
            "tags": {
              "Name": "cloudstack-node"
            },
            "tags_all": {
              "Name": "cloudstack-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a43914f167d1e70e"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated",
            "aws_security_group.cloudstack",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "local_file.private_key",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01c7096235204c7be",
            "arn": "arn:aws:ec2:eu-west-1:277892772912:instance/i-09754c133c6a15fdb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09754c133c6a15fdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "cloudstack-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f7105fb9434a14b9"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-098f0b49d4e66077a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7105fb9434a14b9",
            "private_dns": "ip-10-0-1-16.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-63-32-196-14.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.32.196.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-01a57081517698730",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0558623b258fd7ac3",
            "tags": {
              "Name": "kvm-node"
            },
            "tags_all": {
              "Name": "kvm-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09015688fbb4da028"
            ]
          },
          "dependencies": [
            "aws_eip.kvm",
            "aws_instance.cloudstack",
            "aws_key_pair.generated",
            "aws_network_interface.kvm_cloudbr1",
            "aws_network_interface.kvm_primary",
            "aws_security_group.cloudstack",
            "aws_security_group.kvm",
            "aws_subnet.cloudbr1",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "local_file.private_key",
            "tls_private_key.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:internet-gateway/igw-09a5329fdc2878ffc",
            "id": "igw-09a5329fdc2878ffc",
            "owner_id": "277892772912",
            "tags": {
              "Name": "cloudstack-igw"
            },
            "tags_all": {
              "Name": "cloudstack-igw"
            },
            "vpc_id": "vpc-05c049ca778ec3cfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "kvm_cloudbr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:network-interface/eni-098f0b49d4e66077a",
            "id": "eni-098f0b49d4e66077a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:4f:d4:2d:ee:b1",
            "owner_id": "277892772912",
            "private_dns_name": "ip-10-0-2-211.eu-west-1.compute.internal",
            "private_ip": "10.0.2.211",
            "private_ip_list": [
              "10.0.2.211"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.211"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09015688fbb4da028"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0884c3676981819c2",
            "tags": {
              "Name": "kvm-cloudbr1"
            },
            "tags_all": {
              "Name": "kvm-cloudbr1"
            }
          },
          "dependencies": [
            "aws_security_group.cloudstack",
            "aws_security_group.kvm",
            "aws_subnet.cloudbr1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "kvm_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:network-interface/eni-0f7105fb9434a14b9",
            "id": "eni-0f7105fb9434a14b9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:80:24:6f:e1:5b",
            "owner_id": "277892772912",
            "private_dns_name": "ip-10-0-1-16.eu-west-1.compute.internal",
            "private_ip": "10.0.1.16",
            "private_ip_list": [
              "10.0.1.16"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.16"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09015688fbb4da028"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0558623b258fd7ac3",
            "tags": {
              "Name": "kvm-primary"
            },
            "tags_all": {
              "Name": "kvm-primary"
            }
          },
          "dependencies": [
            "aws_security_group.cloudstack",
            "aws_security_group.kvm",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:route-table/rtb-0ff138bd5a6a16756",
            "id": "rtb-0ff138bd5a6a16756",
            "owner_id": "277892772912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a5329fdc2878ffc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudstack-rt"
            },
            "tags_all": {
              "Name": "cloudstack-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c049ca778ec3cfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dee12d08daae5e6e",
            "route_table_id": "rtb-0ff138bd5a6a16756",
            "subnet_id": "subnet-0558623b258fd7ac3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:security-group/sg-0a43914f167d1e70e",
            "description": "Security group for CloudStack node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a43914f167d1e70e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "cloudstack-sg",
            "name_prefix": "",
            "owner_id": "277892772912",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudstack-sg"
            },
            "tags_all": {
              "Name": "cloudstack-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c049ca778ec3cfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:security-group/sg-09015688fbb4da028",
            "description": "Security group for KVM node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09015688fbb4da028",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a43914f167d1e70e"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kvm-sg",
            "name_prefix": "",
            "owner_id": "277892772912",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kvm-sg"
            },
            "tags_all": {
              "Name": "kvm-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c049ca778ec3cfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cloudstack",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudbr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:subnet/subnet-0884c3676981819c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0884c3676981819c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277892772912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudstack-cloudbr1"
            },
            "tags_all": {
              "Name": "cloudstack-cloudbr1"
            },
            "vpc_id": "vpc-05c049ca778ec3cfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:subnet/subnet-0558623b258fd7ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0558623b258fd7ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277892772912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudstack-subnet"
            },
            "tags_all": {
              "Name": "cloudstack-subnet"
            },
            "vpc_id": "vpc-05c049ca778ec3cfc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:277892772912:vpc/vpc-05c049ca778ec3cfc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d30ce18338ffc12",
            "default_route_table_id": "rtb-02057db4f15a03ab0",
            "default_security_group_id": "sg-01ac55d6e943d0b56",
            "dhcp_options_id": "dopt-1a1f0d7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c049ca778ec3cfc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02057db4f15a03ab0",
            "owner_id": "277892772912",
            "tags": {
              "Name": "cloudstack-vpc"
            },
            "tags_all": {
              "Name": "cloudstack-vpc"
            }
          }
        }
      ]
    }
  ]
}